--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.99.0",
-    "@react-three/fiber": "^8.15.16",
-    "@react-three/postprocessing": "^2.15.13",
-    "@stripe/stripe-js": "^3.0.5",
-    "firebase": "^10.8.0",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.1",
-    "three": "^0.161.0",
-    "zustand": "^4.5.1"
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.0.0",
+    "@react-three/postprocessing": "^3.0.0",
+    "@stripe/stripe-js": "^3.1.0",
+    "firebase": "^11.0.0",
+    "lucide-react": "^0.345.0",
+    "react": "^18.4.0",
+    "react-dom": "^18.4.0",
+    "react-router-dom": "^6.23.0",
+    "three": "^0.162.0",
+    "three-mesh-bvh": "^0.8.0",
+    "zustand": "^4.6.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@types/three": "^0.161.2",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.2"
+    "@types/react": "^18.4.0",
+    "@types/react-dom": "^18.4.0",
+    "@types/three": "^0.162.0",
+    "@vitejs/plugin-react": "^4.4.0",
+    "autoprefixer": "^10.5.0",
+    "eslint": "^9.10.0",
+    "postcss": "^8.5.0",
+    "tailwindcss": "^3.5.0",
+    "typescript": "^5.6.0",
+    "vite": "^5.5.0"
   }
 }
